--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,10 @@
 
     <groupId>com.redhat.eap.microprofile</groupId>
     <artifactId>eap73-microprofile-hello</artifactId>
-    <version>7.3.0.Beta-redhat-SNAPSHOT</version>
+    <version>7.3.0-redhat-SNAPSHOT</version>
 
     <packaging>war</packaging>
+    
     <name>EAP 7.3 and MicroProfile: helloworld</name>
     <description>A simple Hello World project that uses MicroProfile</description>
 
@@ -36,7 +37,7 @@
         <root.dir>${project.basedir}</root.dir>
         <jboss.home.name>EAP7_HOME</jboss.home.name>
         <product.name>JBoss EAP</product.name>
-        <product.version>7.3.0.Beta</product.version>
+        <product.version>7.3.0.GA</product.version>
         <!-- A base list of dependency and plug-in version used in the various quick starts. -->
         <version.wildfly.maven.plugin>2.0.0.Final</version.wildfly.maven.plugin>
         <version.org.wildfly.checkstyle-config>1.0.7.Final</version.org.wildfly.checkstyle-config>
